--- a/denys/reservation.css
+++ b/denys/reservation.css
@@ -1,10 +1,16 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
 body {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: "Rubik", sans-serif;
     background: #fff;
     font-size: 16px;
     font-weight: 300;
     color: #cccccc;
-    background: linear-gradient(rgb(0, 0, 0), rgb(48, 48, 48));
+    background: #fff;
 }
 
 a {
@@ -12,26 +18,53 @@ a {
 }
 
 h1 {
-    color: #ffffff;
-    filter: drop-shadow(#000000 -5px -5px 0px);
+    color: #3a1619;
+    font-size: 40px;
 }
 
 .slider {
-    display: block;
-    height: 100vh;
-   background-image: url('./images/bar.jpg');
-   object-fit: cover;  
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    height: 90vh;
+    background-color: #b6a4a5;
+    background-image: url("C:\Users\Admin\Desktop\terasa2.jpg");
 }
 
-.reservation{
-        
+.slider-content {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    margin-top: 170px;
+}
+
+.slider-content a,
+.slider-content span {
+    margin-right: 10px;
+    transition: 0.4s;
+}
+
+.slider-content a:hover {
+    color: #3a1619;
+}
+
+.reservation {
+    margin-top: 50px;
 }
 
 .container {
     font-size: 24px;
     text-align: center;
+
+    background-color: #fff;
     
     display: block;
+}
+
+.container h2 {
+    color: #6d494c;
+    padding: 20px;
 }
 
 .info_box {
@@ -42,12 +75,9 @@ h1 {
 
     display: flex;
     justify-content: center;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .info_column {
-    /* display: flex;
-    flex-wrap: wrap; */
     flex: 1;
     padding: 10px;
     
@@ -80,6 +110,7 @@ margin-top: 20px;
     text-decoration: none;
     transition: .4s;
     -webkit-transition: all .4s ease;
+    color: #6d494c;
 }
 
 .inst_link:hover {
@@ -116,7 +147,7 @@ filter: drop-shadow(5px 5px black);
 }
 
 .row_of_pictures span:hover .row_of_pictures_img{
-    filter: grayscale(1);
+    filter: grayscale(0.7);
     transition: 1s;
 }
 
@@ -130,12 +161,9 @@ filter: drop-shadow(5px 5px black);
     opacity: 0;
 }
 
-#for_section1 {
-    padding-top: 200px;
-}
-
 #terasa_img {
     width: 400px;
     margin-right: 50px;
 
+    filter: drop-shadow(0 0px 5px #a48e8f);
 }
