--- a/denys/reservation.css
+++ b/denys/reservation.css
@@ -29,14 +29,13 @@ h1 {
 
     height: 90vh;
     background-color: #b6a4a5;
-    background-image: url("C:\Users\Admin\Desktop\terasa2.jpg");
+    justify-content: center;
 }
 
 .slider-content {
     display: flex;
     align-items: center;
     padding: 10px;
-    margin-top: 170px;
 }
 
 .slider-content a,
