--- a/denys/contacts.css
+++ b/denys/contacts.css
@@ -30,12 +30,13 @@ h2 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 
     height: 90vh;
-    /* background-color: #b6a4a5; */
-    background-image: url(images/bunches1.jpg);
 
-    justify-content: center;
+    background-image: url(images/bunches1.jpg);
+    background-size: cover;
+    background-position: center;
 }
 
 .slider-content {
@@ -55,19 +56,22 @@ h2 {
 }
 
 .contact-section {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-
+    width: 100%;
+    
     margin-top: 50px;
+}
+
+.contact-map {
 }
 
 .contact-info {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
-    height: 400px;
 
     margin-right: 50px;
 }
@@ -121,38 +125,13 @@ h2 {
     margin-top: 50px;
 }
 
-.row_of_pictures span{
-    max-width: 20%;
-    max-height: 100px;
-}
-
 .row_of_pictures_img {
-    width: 300px; height: 300px; object-fit: cover;
+    display: none;
+    width: 100%; 
+    height: 300px; 
+    object-fit: cover;
     z-index: 100;
     transition: 1s;
-}
-
-
-
-.row_of_pictures span:hover .row_of_pictures_svg{
-opacity: 1;
-transition: 1s;
-filter: drop-shadow(5px 5px black);
-}
-
-.row_of_pictures span:hover .row_of_pictures_img{
-    filter: grayscale(0.7);
-    transition: 1s;
-}
-
-.row_of_pictures_svg {
-    position: absolute;
-    max-width: 50px;
-    margin-left: -175px;
-    margin-top: 120px;
-    z-index: 1000;
-    transition: 1s;
-    opacity: 0;
 }
 
 .container {
@@ -162,4 +141,44 @@ filter: drop-shadow(5px 5px black);
     background-color: #fff;
     
     display: block;
+}
+
+
+@media screen and (max-width: 1000px) {
+    .slider {
+        height: 60vh;
+    }
+
+    .contact-info {
+        margin-left: 10px;
+    }
+}
+
+
+/* for phones */
+@media screen and (max-width: 860px) { 
+    .slider {
+        height: 60vh;
+    }
+
+    .contact-section {
+        flex-direction: column;
+    }
+
+    .contact-info {
+        margin: 0 10px 20px 10px;
+    }
+
+    .contact-map iframe {
+        position: absolute;
+        top: 450px;
+        left: 0;
+        width: 100%;
+        /* height: 100%; */
+    }
+    
+    .inst_section {
+        width: 100%;
+        margin-top: 550px;
+    }
 }
