--- a/denys/reservation.css
+++ b/denys/reservation.css
@@ -86,12 +86,39 @@ h1 {
     padding: 10px;
 }
 
+.error-container {
+    display: flex;
+    flex-direction: column;
+    /* align-items: flex-start; */
+    text-align: left;
+}
+
+#input-submit {
+    background-color: #b6a4a5;
+    width: 200px;
+    height: 50px;
+    color: #3a1619;
+    font-size: 20px;
+    border: 0;
+    filter: drop-shadow(0 0px 10px #a48e8f);
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+#input-submit:hover {
+    font-size: 21px;
+    background-color: #c4b3b4;
+    filter: drop-shadow(0 0px 7px #a48e8f);
+}
+
+.error-message {
+    color: #eb9393;
+}
+
 .info_column input{
 margin-bottom: 50px;
 margin-top: 20px;
 }
-
-
 
 .input_class {
     display: block;
