--- a/Yulia/style.css
+++ b/Yulia/style.css
@@ -267,6 +267,12 @@ p {
   .slider-text h1,
   .slider-text p {
     font-size: 20px;
+    margin: 0;
+    transition: opacity 1s ease; /* Додайте перехід для властивості opacity */
+  }
+
+  .animate-text {
+    opacity: 0;
   }
 
   .slider-button .btn {
@@ -340,4 +346,21 @@ p {
     font-size: 1.5vw;
     margin-top: 2%;
   }
+}
+
+
+/* Анімація при завантаженні сторінки */
+.animate {
+  animation: fadeIn 2s ease-in-out;
+}
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
+/* Ефект при наведенні на slider-text */
+.hovered {
+  transform: scale(1.1);
+  transition: transform 0.5s ease-in-out;
 }
