Add Reservation page

--- a/dolce_factory/main/static/main/reservation.css
+++ b/dolce_factory/main/static/main/reservation.css
@@ -33,7 +33,7 @@ h1 {
     
     background-size: cover;
     background-position: center;
-    background-image: url(images/bunches1.jpg);
+    /* background-image: url(images/bunches1.jpg); */
 }
 
 .slider-content {
