--- a/dolce_factory/main/static/main/contacts.css
+++ b/dolce_factory/main/static/main/contacts.css
@@ -34,7 +34,7 @@ h2 {
 
     height: 90vh;
 
-    background-image: url(images/bunches1.jpg);
+    /* background-image: url(images/bunches1.jpg); */
     background-size: cover;
     background-position: center;
 }
