--- a/dolce_factory/templates/main.html
+++ b/dolce_factory/templates/main.html
@@ -7,17 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'main/contacts.css' %}">
+    <link rel="stylesheet" href="{% static 'main/reservation.css' %}">
     <title>Dolce FACTORY</title>
 </head>
 <body>
     {% include "navbar.html" %}
-    <hr>
+    <hr style="margin-bottom: 10px;">
     
     {% block content %}
     
     {% endblock %}
     
-    <hr>
+    <hr style="margin-top: 25px;">
     {% include "footer.html" %}
 </body>
 </html>
