Add link for css

--- a/dolce_factory/templates/main.html
+++ b/dolce_factory/templates/main.html
@@ -8,6 +8,7 @@
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="{% static 'main/contacts.css' %}">
     <link rel="stylesheet" href="{% static 'main/reservation.css' %}">
+    <link rel="stylesheet" href="{% static 'main/home.css' %}">
     <title>Dolce FACTORY</title>
 </head>
 <body>
