--- a/dolce_factory/main/static/main/reservation.css
+++ b/dolce_factory/main/static/main/reservation.css
@@ -191,9 +191,16 @@ filter: drop-shadow(5px 5px black);
     opacity: 0;
 }
 
+.div-for-img {
+    width: 100%;
+    height: 100%;
+}
+
 #terasa_img {
     width: 400px;
     margin-right: 50px;
+
+    object-fit: cover;
 
     filter: drop-shadow(0 0px 5px #a48e8f);
 }
