--- a/Anna/css/menu.css
+++ b/Anna/css/menu.css
@@ -2,14 +2,11 @@
   max-width: 80rem;
   margin: 0 auto;
 }
-.container {
-  padding: 8rem 0;
-}
+
 .heading {
   text-align: center;
 }
 .subheading {
-  font-size: 1.6rem;
   text-transform: uppercase;
   font-weight: 600;
   letter-spacing: 0.1rem;
@@ -18,7 +15,6 @@
 .heading-secondary {
   line-height: 1.5;
   color: #404044;
-  font-size: 3.4rem;
   font-weight: 600;
 }
 
@@ -31,34 +27,27 @@
 }
 .btn-menu {
   border-radius: 1rem;
-  font-size: 1.8rem;
   text-decoration: none;
   color: #ede8e9;
   font-weight: 600;
   background-color: #a48e8f;
-  padding: 1.2rem 2rem;
   box-shadow: 0px 4px 18px -12px rgba(0, 0, 0, 0.75);
   border: none;
 }
 
 .menu-icon {
-  height: 2.4rem;
-  width: 2.4rem;
   margin-right: 1rem;
 }
 
 .menu-list {
   display: grid;
-  grid-template-columns: 1fr 1fr;
   gap: 2rem;
 }
 
 .dish {
   display: flex;
-  justify-content: space-around;
-  gap: 3rem;
   background: #fff;
-  padding: 15px;
+  align-items: center;
   box-shadow: 0px 1px 18px -12px rgba(0, 0, 0, 0.75);
 }
 
@@ -88,10 +77,10 @@
 }
 .price {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
   font-size: 2rem;
   line-height: 1.4;
+  flex-grow: 1;
 }
 /* FOR ACTIVE BTN ON MENU AND CHANGING THE CONTENT ACCORDING TO BTN ( USING JS IN FUTURE) */
 .btn-active {
