--- a/Anna/css/style.css
+++ b/Anna/css/style.css
@@ -10,11 +10,7 @@
   padding: 0 4.8rem;
   position: relative;
 }
-.logo {
-  height: 2.2rem;
-  transform: scale(7);
-  margin-left: 7.2rem;
-}
+
 /* ********************************* */
 /* NAVIGATION */
 /* ********************************* */
@@ -72,7 +68,9 @@
 /* Footer SECTION */
 /* ********************************* */
 .footer {
-  padding: 0.8rem 0;
+  width: 95%;
+  padding: 2.8rem 0;
+  margin: 0 auto;
   border-top: 1px solid #5d3538;
 }
 .grid--footer {
